...
import '../../constants/icon_designs.dart';


/// A stateful widget that represents the profile page of the app. The profile page shows
/// the user's information such as their username, food preferences, and profile picture.
class ProfilePage extends StatefulWidget {
  const ProfilePage({Key? key}) : super(key: key);

  @override
  State<ProfilePage> createState() => _ProfilePageState();
}

class _ProfilePageState extends State<ProfilePage> {
...
  Future<void> signOut() async {
    await RAAuthService().signOut();
  }

  Widget signOutButton(Color color) {
    return ElevatedButton(
      key: const Key("SignOutButton"),
      onPressed: signOut,
      style:
          ButtonStyle(backgroundColor: MaterialStateProperty.all<Color>(color)),
      child: const Text("sign out"),
    );
  }
...
            Padding(
              padding: const EdgeInsets.fromLTRB(8, 30, 8, 0),
              child: Center(
                child: Stack(
                  children: [
                    Container(
                      key: const Key("ProfilePreviewButton"),
                      height: 100,
                      width: MediaQuery.of(context).size.width - 20,
                      decoration: BoxDecoration(
                        color: Theme.of(context).colorScheme.surface,
                        borderRadius:
                            const BorderRadius.all(Radius.circular(14)),
...
                            borderRadius: BorderRadius.circular(14),
                            onTap: () {
                              Navigator.push(
                                      context,
                                      MaterialPageRoute(
                                          builder: (context) =>
                                              const AccountSettings(
                                                key: Key("AccountSettings"),
                                              )))
                                  .then((value) => setMainPageState());
                            },
                            child: const SizedBox.shrink()),
                      ),
...
                  style: const TextStyle(
                      fontSize: 25, fontWeight: FontWeight.bold),
                ),
              ),
            ),
            Padding(
              key: const Key("SettingsButtonEinstellungen"),
              padding: const EdgeInsets.fromLTRB(0, 20, 0, 0),
              child: SettingButton(
                text: 'Einstellungen',
                page: const AppSettings(
                  key: Key("SettingsPage"),
                ),
                setMainPageState: setMainPageState,
              ),
            ),
            Padding(
              key: const Key("SettingsButtonPräferenzen"),
              padding: const EdgeInsets.fromLTRB(0, 10, 0, 0),
              child: SettingButton(
                text: 'Nahrungsmittelpräferenzen',
                page: const Preferences(
                  key: Key("PreferencesPage"),
                ),
                setMainPageState: setMainPageState,
              ),
            ),
            Padding(
              key: const Key("SettingsButtonAllergien"),
              padding: const EdgeInsets.fromLTRB(0, 10, 0, 0),
              child: SettingButton(
                text: 'Allergien',
                page: const Allergies(
                  key: Key("AllergiesPage"),
                ),
                setMainPageState: setMainPageState,
              ),
            ),
          ],
        ));
...
