...
  /// Returns a Dialogue which can be used to add a new item to the shopping list
  Widget getItemAddDialogue(BuildContext context) {
    TextEditingController nameController = TextEditingController();
    TextEditingController unitController = TextEditingController();
    TextEditingController amountController = TextEditingController();
    return AlertDialog(
      key: const Key("ItemAddDialogue"),
      content: Column(
        mainAxisSize: MainAxisSize.min,
        children: [
          RAInputField(
            key: const Key("NewItemName"),
            hintText: "Name",
            controller: nameController,
            charLimit: 200,
          ),
          RAInputField(
            key: const Key("NewItemAmount"),
            hintText: "Menge",
            controller: amountController,
            onlyNumbers: true,
            charLimit: 6,
          ),
          RAInputField(
            key: const Key("NewItemUnit"),
            hintText: "Einheit",
            controller: unitController,
            charLimit: 10,
            quickSelect: units,
          ),
        ],
...
            Navigator.pop(context);
          },
          description: "abbrechen",
          backgroundColor: Colors.black54,
        ),
        RAButton(
          key: const Key("AddItemConfirmButton"),
          onTap: () {
            if (nameController.text.isNotEmpty &&
                unitController.text.isNotEmpty &&
                amountController.text.isNotEmpty) {
              addShoppingListItem(
                RAIngredient(
...
    return Container(
      color: Theme.of(context).canvasColor,
      child: SafeArea(
        child: Scaffold(
          appBar: AppBar(
            leading: IconButton(
              key: const Key("BackButtonShoppingListOverview"),
              onPressed: () {
                Navigator.pop(context);
              },
              icon: Icon(
                Icons.arrow_back_ios,
                size: 24,
...
                    ),
                  ],
                ),
          floatingActionButtonLocation:
              FloatingActionButtonLocation.centerFloat,
          floatingActionButton: RAButton(
            key: const Key("AddItemToShoppingListButton"),
            description: "Sache hinzufügen",
            onTap: () {
              showDialog(
                context: context,
                builder: (BuildContext context) => getItemAddDialogue(context),
              );
...
